<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<!-- Content Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_view">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.frida.closet.MapsActivity"
        />
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:id="@+id/recents_view">
        <TableRow>
            <TextView
                android:text="@string/text_recents"
                android:padding="3dip"
                android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/text_recents"
                android:padding="3dip"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/most_viewed_view">
        <TextView
            android:text="@string/text_most_viewed"
            android:padding="3dip"
            android:layout_height="10dip"
            android:layout_width="10dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_view">
        <TextView
            android:text="@string/text_search"
            android:padding="3dip"
            android:layout_height="10dip"
            android:layout_width="10dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/more_view">
        <TextView
            android:text="@string/text_more"
            android:padding="3dip"
            android:layout_height="10dip"
            android:layout_width="10dip"/>
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:id="@+id/info_view"
        android:background="@color/grey">
        <TableRow>
            <TableRow
                android:layout_span="2"
                android:background="@color/white"
                android:layout_height="60dp">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cleanshinytoilet"
                    android:scaleType="center"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:id="@+id/save_row">
            <TableRow
                android:layout_span="2"
                android:background="@color/white"
                android:layout_height="60dp">
                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="SAVE"
                    android:scaleType="center"/>
            </TableRow>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/toilet_name"
                android:padding="18dip"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@id/toilet_name_id"
                android:padding="18dip"
                android:paddingLeft="100dip"
                android:paddingStart="100dip"
                android:textSize="22sp"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/toilet_rating"
                android:padding="18dip"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@id/toilet_rating_id"
                android:padding="18dip"
                android:paddingLeft="100dip"
                android:paddingStart="100dip"
                android:textSize="22sp"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/toilet_status"
                android:padding="18dip"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@id/toilet_status_id"
                android:padding="18dip"
                android:paddingLeft="100dip"
                android:paddingStart="100dip"
                android:textSize="22sp"
                android:textColor="@color/black"/>
        </TableRow>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:progressDrawable="@drawable/seekbar_style"
            android:progress="5"
            android:thumbTintMode="multiply"
            android:max="10" />
        <include layout="@layout/timepickers"
        />

    </TableLayout>

    <include layout="@layout/new_toilet"
        android:id="@+id/new_view"
        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/bottom_color_selector"
        app:itemTextColor="@drawable/bottom_color_selector"
        app:menu="@menu/bottom_navigation_main"
        />

</RelativeLayout>